--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -82,5 +82,45 @@
 	}
 }
 
+.password-hide-show {
+	position: relative;
+}
+
+button[aria-pressed="false"] {
+	margin-right: 10px;
+	padding: 4px 8px;
+	border: 0px;
+	color: #666;
+	background-color: #eee;
+	
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px; 
+	border-radius: 3px;
+}
+
+button[aria-pressed="true"] {
+	margin-right: 10px;
+	padding: 4px 8px;
+	border: 0px;
+	color: #eee !important;
+	background-color: #666 !important;
+	
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px; 
+	border-radius: 3px;
+
+	-moz-box-shadow:    0px 0px 2px 0px #ccc !important;
+	-webkit-box-shadow: 0px 0px 2px 0px #ccc !important;
+	box-shadow:         0px 0px 2px 0px #ccc !important;
+}
+
+.bg-dark {
+	background-color: #65bd77;
+}
+
+.white-text, a.white-text {
+	color: white;
+}
+
 @media(min-width:768px){}
 @media(min-width:1200px){}
