--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -122,5 +122,18 @@ button[aria-pressed="true"] {
 	color: white;
 }
 
+p.pre-text {
+  display: block;
+  padding: 9.5px;
+  margin: 0 0 10px;
+  font-size: 13px;
+  line-height: 1.42857143;
+  color: #333;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+	font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
 @media(min-width:768px){}
 @media(min-width:1200px){}
