--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2137,12 +2137,13 @@ fieldset[disabled] .btn-gplus.active {
   width: 16px;
   height: 16px;
 }
-.parsley-error-list {
+.parsley-errors-list {
   margin: 0;
   padding: 0;
-  list-style: none;
+  list-style: none !important;
   margin-top: 6px;
   font-size: 12px;
+  color: lightcoral;
 }
 .parsley-error {
   border-color: #ff5f5f !important;
