--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -32,6 +32,18 @@
 	right: 0 !important;
 }
 
+.error-msg {
+	color: red;
+}
+
+textarea.text-msg-preview {
+	font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+	color: #333;
+	line-height: 1.5;
+	font-size: 16px;
+	resize: none;
+}
+
 
 @media(max-width:767px){
 	
